[gd_scene load_steps=4 format=3 uid="uid://diifuvv4b74ip"]

[ext_resource type="Script" path="res://scripts/practice_screen.gd" id="1_dedy7"]
[ext_resource type="Theme" uid="uid://dfmm2yx4nxcfu" path="res://assets/base_theme.tres" id="2_dy68m"]
[ext_resource type="Theme" uid="uid://cc3p44jk2vv0" path="res://assets/exercise_theme.tres" id="3_0f230"]

[node name="PracticeScreen" type="CanvasLayer"]
script = ExtResource("1_dedy7")

[node name="PracticePanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_dy68m")

[node name="VBoxContainer" type="VBoxContainer" parent="PracticePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PracticePanel/VBoxContainer"]
layout_mode = 2

[node name="TableTitle" type="Label" parent="PracticePanel/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Practice"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LearnLettersButton" type="Button" parent="PracticePanel/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 5
text = "Practice Letters"

[node name="LearnWordsButton" type="Button" parent="PracticePanel/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Practice Words
(not implemented yet)"

[node name="BackButton" type="Button" parent="PracticePanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[node name="LearningPanelExerciseType1" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_dy68m")

[node name="VBoxContainer" type="VBoxContainer" parent="LearningPanelExerciseType1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="TitleLabel" type="Label" parent="LearningPanelExerciseType1/VBoxContainer"]
layout_mode = 2
text = "Exercise"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="LearningPanelExerciseType1/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_0f230")
theme_override_constants/separation = 50
alignment = 1

[node name="ExerciseLabel" type="Label" parent="LearningPanelExerciseType1/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 104
text = "Question"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="LearningPanelExerciseType1/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="LearningPanelExerciseType1/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_0f230")
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 2

[node name="OptionButton1" type="Button" parent="LearningPanelExerciseType1/VBoxContainer/VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
text = "Option1"

[node name="OptionButton2" type="Button" parent="LearningPanelExerciseType1/VBoxContainer/VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
text = "Option2"

[node name="OptionButton3" type="Button" parent="LearningPanelExerciseType1/VBoxContainer/VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
text = "Option3"

[node name="OptionButton4" type="Button" parent="LearningPanelExerciseType1/VBoxContainer/VBoxContainer/HBoxContainer/GridContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
text = "Option4"

[node name="CheckContinueButton" type="Button" parent="LearningPanelExerciseType1/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 48
text = "Next Question"

[node name="QuitLessonButton" type="Button" parent="LearningPanelExerciseType1/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit"

[connection signal="pressed" from="PracticePanel/VBoxContainer/VBoxContainer/LearnLettersButton" to="." method="_on_learn_letters_button_pressed"]
[connection signal="pressed" from="PracticePanel/VBoxContainer/VBoxContainer/LearnWordsButton" to="." method="_on_learn_words_button_pressed"]
[connection signal="pressed" from="PracticePanel/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="LearningPanelExerciseType1/VBoxContainer/VBoxContainer/HBoxContainer/GridContainer/OptionButton1" to="." method="_on_option_button_1_pressed"]
[connection signal="pressed" from="LearningPanelExerciseType1/VBoxContainer/VBoxContainer/HBoxContainer/GridContainer/OptionButton2" to="." method="_on_option_button_2_pressed"]
[connection signal="pressed" from="LearningPanelExerciseType1/VBoxContainer/VBoxContainer/HBoxContainer/GridContainer/OptionButton3" to="." method="_on_option_button_3_pressed"]
[connection signal="pressed" from="LearningPanelExerciseType1/VBoxContainer/VBoxContainer/HBoxContainer/GridContainer/OptionButton4" to="." method="_on_option_button_4_pressed"]
[connection signal="pressed" from="LearningPanelExerciseType1/VBoxContainer/VBoxContainer/CheckContinueButton" to="." method="_on_check_continue_button_pressed"]
[connection signal="pressed" from="LearningPanelExerciseType1/VBoxContainer/QuitLessonButton" to="." method="_on_quit_lesson_button_pressed"]
